Footer Updated Again

--- a/Ritual.Booking.Web/Views/Shared/_Layout.cshtml
+++ b/Ritual.Booking.Web/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Ritual</p>
+            <p>&copy; @DateTime.Now.Year - Ritual Gym</p>
         </footer>
     </div>
 
