Major Updates, SQL Updates, Quarterly Assessments Managed

--- a/Ritual.Booking.Web/Views/Shared/_Layout.cshtml
+++ b/Ritual.Booking.Web/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/themes/base/css")
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
@@ -24,6 +25,12 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Locations", "Index", "Locations")</li>
+                    <li>@Html.ActionLink("Quarterly Assessments", "Index", "QuarterlyAssessments")</li>
+                    <li>@Html.ActionLink("Members", "Index", "Members")</li>
+                    @*<li>@Html.ActionLink("Bookings", "Index", "SessionBookings")</li>
+                        <li>@Html.ActionLink("Booking States", "Index", "SessionBookingStates")</li>
+                        <li>@Html.ActionLink("Memberships", "Index", "Memberships")</li>
+                        <li>@Html.ActionLink("Membership States", "Index", "Membership States")</li>*@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
@@ -38,8 +45,10 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/jquery-ui")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/ritual")
     @RenderSection("scripts", required: false)
 </body>
 </html>
