--- a/Ritual.Booking.Web/Views/Account/Register.cshtml
+++ b/Ritual.Booking.Web/Views/Account/Register.cshtml
@@ -19,6 +19,13 @@
     </div>
 
     <div class="form-group">
+        @Html.LabelFor(m => m.Salutation, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Salutation, new { @class = "form-control" })
+        </div>
+    </div>
+    
+    <div class="form-group">
         @Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
