--- a/Ritual.Booking.Web/Views/Home/About.cshtml
+++ b/Ritual.Booking.Web/Views/Home/About.cshtml
@@ -1,7 +1,20 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "About Ritual Gym";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<section class="content-header">
+    <div class="row">
+        <div class="large-12 columns">
+            <h1>@ViewBag.Title</h1>
+        </div>
+    </div>
+</section>
+<!-- Main content -->
+<section class="content">
+    <div class="row">
+        <div class="large-12 columns">
+            <h1>Our Teachings</h1>
+            
+        </div>
+    </div>
+</section>
 
-<p>Use this area to provide additional information.</p>
