--- a/Ritual.Booking.Web/Views/QuarterlyAssessments/Index.cshtml
+++ b/Ritual.Booking.Web/Views/QuarterlyAssessments/Index.cshtml
@@ -4,67 +4,80 @@
     ViewBag.Title = "Ritual Quarterly Assessments";
 }
 
-<h2>View All Quarterly Assessments</h2>
+<section class="content-header">
+    <div class="row">
+        <div class="large-12 columns">
+            <h1>@ViewBag.Title</h1>
+        </div>
+    </div>
+</section>
+<!-- Main content -->
+<section class="content">
+    <div class="row">
+        <div class="large-12 columns">
+            <p>
+                @Html.ActionLink("Create New", "Create", "", new { @class = "button" })
+            </p>
+            @using (Html.BeginForm())
+            {
+                <label class="control-label">Assessment Search</label>
+                <p>Find by Year, Trainer or Member:</p>
+                @Html.TextBox("SearchString", "", new { @class = "form-control" })
+                <input type="submit" class="button" value="Search" />
+            }
+            <table class="table">
+                <tr>
+                    <th>
+                        Quarter
+                    </th>
+                    <th>
+                        Year
+                    </th>
+                    <th>
+                        Date
+                    </th>
+                    <th>
+                        RPE Score
+                    </th>
+                    <th>
+                        @Html.ActionLink("Member Name", "Index", new { sortOrder = ViewBag.MemberNameSortParm })
+                    </th>
+                    <th>
+                        @Html.ActionLink("Trainer Name", "Index", new { sortOrder = ViewBag.TrainerNameSortParm })
+                    </th>
+                    <th>Action</th>
+                </tr>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-@using (Html.BeginForm())
-{
-    <p>
-        Find by Year, Trainer or Member: @Html.TextBox("SearchString")
-        <input type="submit" value="Search" />
-    </p>
-}
-<table class="table">
-    <tr>
-        <th>
-            Quarter
-        </th>
-        <th>
-            Year
-        </th>
-        <th>
-            Date
-        </th>
-        <th>
-            RPE Score
-        </th>
-        <th>
-            @Html.ActionLink("Member Name", "Index", new { sortOrder = ViewBag.MemberNameSortParm })
-        </th>
-        <th>            
-            @Html.ActionLink("Trainer Name", "Index", new { sortOrder = ViewBag.TrainerNameSortParm })
-        </th>
-        <th></th>
-    </tr>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.QAQuarter)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.QAYear)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.QADateTime)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.QAClientRPE)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Member.FirstName) @Html.DisplayFor(modelItem => item.Member.LastName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Trainer.FirstName) @Html.DisplayFor(modelItem => item.Trainer.LastName)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                        </td>
+                    </tr>
+                }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.QAQuarter)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.QAYear)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.QADateTime)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.QAClientRPE)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Member.FirstName) @Html.DisplayFor(modelItem => item.Member.LastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Trainer.FirstName) @Html.DisplayFor(modelItem => item.Trainer.LastName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
-
-</table>
+            </table>
+        </div>
+    </div>
+</section>
