--- a/Ritual.Booking.Web/Views/Shared/_Layout.cshtml
+++ b/Ritual.Booking.Web/Views/Shared/_Layout.cshtml
@@ -24,13 +24,28 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Locations", "Index", "Locations")</li>
-                    <li>@Html.ActionLink("Quarterly Assessments", "Index", "QuarterlyAssessments")</li>
-                    <li>@Html.ActionLink("Members", "Index", "Members")</li>
-                    @*<li>@Html.ActionLink("Bookings", "Index", "SessionBookings")</li>
-                        <li>@Html.ActionLink("Booking States", "Index", "SessionBookingStates")</li>
-                        <li>@Html.ActionLink("Memberships", "Index", "Memberships")</li>
-                        <li>@Html.ActionLink("Membership States", "Index", "Membership States")</li>*@
+
+                    @if (ViewContext.HttpContext.User.Identity.IsAuthenticated)
+                    {
+                        <li>Admin
+                            <ul>
+                                <li>@Html.ActionLink("Locations", "Index", "Locations")</li>
+                                <li>@Html.ActionLink("Members", "Index", "Members")</li>
+                            </ul>
+                        </li>
+
+                        <li>@Html.ActionLink("Training Zone", "Dashboard", "TrainingZone")
+                            <ul>
+                                <li>@Html.ActionLink("Quarterly Assessments", "Index", "QuarterlyAssessments")</li>
+                            </ul>
+                        </li>
+                        
+                        
+                        @*<li>@Html.ActionLink("Bookings", "Index", "SessionBookings")</li>
+                            <li>@Html.ActionLink("Booking States", "Index", "SessionBookingStates")</li>
+                            <li>@Html.ActionLink("Memberships", "Index", "Memberships")</li>
+                            <li>@Html.ActionLink("Membership States", "Index", "Membership States")</li>*@
+                    }
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
@@ -45,8 +60,8 @@
         </footer>
     </div>
 
-        @Scripts.Render("~/bundles/jquery")
-        @Scripts.Render("~/bundles/jquery-ui")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jquery-ui")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/ritual")
     @RenderSection("scripts", required: false)
