--- a/Ritual.Booking.Web/Content/foundation/app.css
+++ b/Ritual.Booking.Web/Content/foundation/app.css
@@ -26,6 +26,24 @@
 		font-weight:lighter;
 		margin:0px;
 	}
+
+      dl {
+    padding: 0.5em;
+  }
+  dt {
+    float: left;
+    clear: left;
+    width: 150px;
+    text-align: right;
+    font-weight: bold;
+  }
+  dt:after {
+    content: ":";
+  }
+  dd {
+    margin: 0 0 0 160px;
+    padding: 0 0 0.2em 0;
+  }
 	
     .table{
         width:100%;
@@ -33,6 +51,11 @@
 
     .table th{
         text-align:left;
+    }
+
+    .table .button{
+        margin:0px;
+        padding:5px;
     }
 
 	p a
