New Controllers, Metadata and Html

--- a/Ritual.Booking.Web/Views/Shared/_Foundation.cshtml
+++ b/Ritual.Booking.Web/Views/Shared/_Foundation.cshtml
@@ -62,6 +62,8 @@
                                 <li>@Html.ActionLink("Locations", "Index", "Locations")</li>
                                 <li>@Html.ActionLink("Members", "Index", "Members")</li>
                                 <li>@Html.ActionLink("Quarterly Assessments", "Index", "QuarterlyAssessments")</li>
+                                <li>@Html.ActionLink("Memberships", "Index", "Memberships")</li>
+                                <li>@Html.ActionLink("Packages", "Index", "Packages")</li>
                             </ul>
                         </li>
 
