--- a/Ritual.Booking.Web/Views/Shared/_Layout.cshtml
+++ b/Ritual.Booking.Web/Views/Shared/_Layout.cshtml
@@ -31,6 +31,8 @@
                             <ul>
                                 <li>@Html.ActionLink("Locations", "Index", "Locations")</li>
                                 <li>@Html.ActionLink("Members", "Index", "Members")</li>
+                                <li>@Html.ActionLink("Memberships", "Index", "Memberships")</li>
+                                <li>@Html.ActionLink("Packages", "Index", "Packages")</li>
                             </ul>
                         </li>
 
