--- a/Ritual.Booking.Web/Views/TrainingZone/Dashboard.cshtml
+++ b/Ritual.Booking.Web/Views/TrainingZone/Dashboard.cshtml
@@ -1,12 +1,29 @@
 ﻿@{
     ViewBag.Title = "Training Zone Dashboard";
 }
-<h2>@ViewBag.Title.</h2>
-
-<p>Welcome [User First Name] to your training gateway.  Be Brave!</p>
-
-<h3>My Upcoming Bookings</h3>
-
-<h3>My Past Bookings</h3>
-
-<h3>My Quarterly Assessments</h3>
+<section class="content-header">
+    <div class="row">
+        <div class="large-12 columns">
+            <h1>@ViewBag.Title</h1>
+        </div>
+    </div>
+</section>
+<!-- Main content -->
+<section class="content">
+    <div class="row">
+        <div class="large-12 columns">
+            <p>Welcome [User First Name] to your training gateway.  Be Brave!</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="large-4 medium-4 columns">
+            <h3>My Upcoming Bookings</h3>
+        </div>
+        <div class="large-4 medium-4 columns">
+            <h3>My Past Bookings</h3>
+        </div>
+        <div class="large-4 medium-4 columns">
+            <h3>My Quarterly Assessments</h3>
+        </div>
+    </div>
+</section>
