--- a/Ritual.Booking.Web/Views/Members/Index.cshtml
+++ b/Ritual.Booking.Web/Views/Members/Index.cshtml
@@ -60,9 +60,9 @@
                             @Html.DisplayFor(modelItem => item.Location.Name)
                         </td>
                         <td>
-                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "button" }) 
+                            @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "button" })
+                            @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "button" })
                         </td>
                     </tr>
                 }
