--- a/Ritual.Booking.Web/Views/QuarterlyAssessments/Index.cshtml
+++ b/Ritual.Booking.Web/Views/QuarterlyAssessments/Index.cshtml
@@ -70,9 +70,9 @@
                             @Html.DisplayFor(modelItem => item.Trainer.FirstName) @Html.DisplayFor(modelItem => item.Trainer.LastName)
                         </td>
                         <td>
-                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "button" })
+                            @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "button" })
+                            @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "button" })
                         </td>
                     </tr>
                 }
