--- a/Ritual.Booking.Web/Views/Locations/Create.cshtml
+++ b/Ritual.Booking.Web/Views/Locations/Create.cshtml
@@ -86,7 +86,7 @@
             }
 
             <div>
-                @Html.ActionLink("Back to List", "Index")
+                @Html.ActionLink("Back to List", "Index", "", new { @class = "button" })
             </div>
 
         </div>
