--- a/Ritual.Booking.Web/Views/Locations/Edit.cshtml
+++ b/Ritual.Booking.Web/Views/Locations/Edit.cshtml
@@ -88,7 +88,7 @@
             }
 
             <div>
-                @Html.ActionLink("Back to List", "Index")
+                @Html.ActionLink("Back to List", "Index", "", new { @class = "button" })
             </div>
         </div>
     </div>
