--- a/Ritual.Booking.Web/Views/Shared/_Foundation.cshtml
+++ b/Ritual.Booking.Web/Views/Shared/_Foundation.cshtml
@@ -27,7 +27,7 @@
         <header class="header">
             <a href="index.html" class="logo">
                 <!-- Add the class icon to your logo image or logo icon to add the margining -->
-                <img class='icon' src='image/flex_logo.png' />
+                <img class='icon' src='/Content/images/logo.png' />
             </a>
             <!-- Header Navbar: style can be found in header.less -->
             <nav class="navbar navbar-static-top" role="navigation">
